# pulumi-py-modules

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: core.md  hooks.py  index.md  networking.md
src/pulumi_azure_modules/: __init__.py
src/pulumi_azure_modules/compute/: __init__.py
src/pulumi_azure_modules/containers/: __init__.py
src/pulumi_azure_modules/core/: __init__.py  get_resource_group.py  resource_group.py
src/pulumi_azure_modules/databases/: __init__.py
src/pulumi_azure_modules/identity/: __init__.py
src/pulumi_azure_modules/keyvault/: __init__.py
src/pulumi_azure_modules/monitoring/: __init__.py
src/pulumi_azure_modules/networking/: __init__.py  get_network_security_group.py  get_network_watcher.py  get_private_dns_zone.py  get_route_table.py  get_subnet.py  get_virtual_network.py  network_security_group.py  network_watcher.py  private_dns_zone.py  route_table.py  subnet.py  virtual_network.py  virtual_network_peering.py
src/pulumi_azure_modules/storage/: __init__.py
tests/: conftest.py
tests/core/: test_get_resource_group.py  test_resource_group.py
tests/networking/: __init__.py  test_get_network_security_group.py  test_get_network_watcher.py  test_get_private_dns_zone.py  test_get_route_table.py  test_get_subnet.py  test_get_virtual_network.py  test_network_security_group.py  test_network_watcher.py  test_private_dns_zone.py  test_route_table.py  test_subnet.py  test_virtual_network.py  test_virtual_network_peering.py
